web commit by JoshTriplett: 14. **What is your plan for dealing with disappearing students?**

--- a/doc/soc/application.mdwn
+++ b/doc/soc/application.mdwn
@@ -67,7 +67,7 @@ Based on ["What should a mentoring organization application look like?"](http://
 
 14. **What is your plan for dealing with disappearing students?**
 
-
+    We will strongly encourage all students working on projects to create a user page with an activity blog, and update that blog regularly with the status of their project.  We will use these blogs to closely monitor the progress of each student on their projects.  If a student mentions problems they have encountered, we will work with them to resolve those problems.  If we see no activity from a student for longer than their usual status-reporting interval, we will check with them directly to determine their status.
 
 15. **What is your plan for dealing with disappearing mentors?**
 
