web commit by JoshTriplett: aggregation of student activity blogs, to encourage and help each other

--- a/doc/soc/application.mdwn
+++ b/doc/soc/application.mdwn
@@ -77,7 +77,7 @@ Based on ["What should a mentoring organization application look like?"](http://
 
     Before the program, we will encourage any students interested in working on ikiwiki to contact us.  We will advise them to create an account on the ikiwiki ikiwiki, look over the TODO items, add ideas of their own, and discuss existing ideas.  We will also help them set up their own ikiwikis, both for experimentation and for actual use.  We will suggest that students begin looking at the ikiwiki codebase and asking questions.
 
-    During the program, we would like all students working on projects to create a user page with an activity blog, and update that blog regularly with the status of their project.  We will accept incremental patches towards a feature, or support students who wish to create their own branch.
+    During the program, we would like all students working on projects to create a user page with an activity blog, and update that blog regularly with the status of their project.  We also plan to aggregate these blogs into a single Summer of Code newsfeed, and suggest that students subscribe to this feed; this will allow them to observe the activity of their fellow students, to spur each other forward and help each other along the way.  We plan to accept incremental patches towards a feature, or support students who wish to create their own branch.
 
     After the program, we will continue to work towards integrating any projects that have not yet completed, and talk with students about their future plans regarding ikiwiki.  If the students have started using ikiwiki for their own wikis, as we hope they will after we encourage them to experiment with it, then they will likely have a vested interest in ongoing ikiwiki development.  Thus, we will encourage them to remain active by helping them become active and interested users.
 
