web commit by JoshTriplett: s/makes use of/uses/

--- a/doc/soc/application.mdwn
+++ b/doc/soc/application.mdwn
@@ -4,7 +4,7 @@ Based on ["What should a mentoring organization application look like?"](http://
 
     The ikiwiki project aims to develop a general-purpose wiki engine, with particular emphasis on personal wikis, project wikis, blogs, and collaborative software development.  We provide several features unique or uncommon amongst wikis:
 
-    * Rather than inventing yet another simplistic, linear revision control system, ikiwiki makes use of standard version control systems such as [[Subversion]] and [[Git]].  You can edit a wiki by committing to your repository, as well as through a traditional web interface.  This makes ikiwiki ideal for collaborative software development; just keep your wiki in version control next to your software.  You can also take advantage of the features of these systems; for instance, you can keep a local branch of your wiki via [[Git]].
+    * Rather than inventing yet another simplistic, linear revision control system, ikiwiki uses a standard version control system such as [[Subversion]] or [[Git]].  You can edit a wiki by committing to your repository, as well as through a traditional web interface.  This makes ikiwiki ideal for collaborative software development; just keep your wiki in version control next to your software.  You can also take advantage of the features of these systems; for instance, you can keep a local branch of your wiki via [[Git]].
 
     * You can turn any set of pages into an inline news feed, complete with RSS and Atom support.  You can run your weblog on ikiwiki (and many people do), run a Planet-like aggregator for external feeds, or keep a TODO and bug list with tags for completed items.
 
