web commit by JoshTriplett: Add the maildirman wiki.

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -10,6 +10,7 @@ Projects
 * [LinuxWorld.com's monkey.linuxworld.com contributor wiki](https://monkey.linuxworld.com/) ([[Git]] backend)
 * The [Sparse wiki](http://kernel.org/pub/linux/kernel/people/josh/sparse).
 * [The BSD Associate Admin Book Project](http://bsdwiki.reedmedia.net/)
+* The [maildirman wiki](http://svcs.cs.pdx.edu/maildirman)
 
 Personal sites and blogs
 ========================
