web commit by JoshTriplett: Fix typo.

--- a/doc/todo/mercurial.mdwn
+++ b/doc/todo/mercurial.mdwn
@@ -2,4 +2,4 @@
 * rcs_notify is not implemented
 * Is the code sufficiently robust? It just warns when mercurial fails.
 * When rcs_commit is called with a $user that is an openid, it will be
-  passed through to mercurial -u. Will mercurual choke on this?
+  passed through to mercurial -u. Will mercurial choke on this?
