web commit by JoshTriplett: No reason to pick a single replacement.  Different plugins for different engines.

--- a/doc/todo/different_search_engine.mdwn
+++ b/doc/todo/different_search_engine.mdwn
@@ -27,6 +27,8 @@ one" kind of search. --[[Joey]]
 >>> it. Thank you java.. The C++ version seems like a better choice to me
 >>> (packages are trivial). --[[Joey]]
 
+> Might I suggest renaming the "search" plugin to "hyperestraier", and then creating new search plugins for different engines?  No reason to pick a single replacement. --[[JoshTriplett]]
+
 <pre>
 Index: IkiWiki/Plugin/search.pm
 ===================================================================
