--- a/doc/sitemap.mdwn
+++ b/doc/sitemap.mdwn
@@ -4,4 +4,4 @@ Also see [[bugs]], [[news]], [[patchqueue]], [[plugins]], [[todo]], and [[users]
 
 [[map pages="* and !*/discussion
 and !bugs/* and !examples/*/* and !news/* and !patchqueue/* and !plugins/* and !sandbox/* and !todo/* and !users/*
-and !*.css and !*.ico and !*.png and !*.svgz"]]
+and !*.css and !*.ico and !*.png and !*.svgz and !*.gif"]]
