pages with inline feeds arn't excluded, no need to list separately

--- a/doc/sitemap.mdwn
+++ b/doc/sitemap.mdwn
@@ -1,6 +1,4 @@
-This map excludes discussion pages, as well as pages with their own inline feeds.
-
-Also see [[bugs]], [[news]], [[patchqueue]], [[plugins]], [[todo]], and [[users]].
+This map excludes discussion pages, as well as subpages that are in feeds.
 
 [[map pages="* and !*/discussion
 and !bugs/* and !examples/*/* and !news/* and !patchqueue/* and !plugins/* and !sandbox/* and !todo/* and !users/*
