--- a/doc/todo/BTS_integration.mdwn
+++ b/doc/todo/BTS_integration.mdwn
@@ -4,4 +4,6 @@ This seems somewhat difficult, as ikiwiki would need to maintain a cache of the 
 
 --[[JoshTriplett]]
 
+[scmbug](http://www.mkgnu.net/?q=scmbug) might help here. --[[JoshTriplett]]
+
 [[tag soc]]
