--- a/doc/todo/preview_changes.mdwn
+++ b/doc/todo/preview_changes.mdwn
@@ -1,1 +1,9 @@
-When editing a page, it would help to have a "preview changes" or "show diff" button, which brings up a diff from the current page content to the proposed new page content.
+When editing a page, it would help to have a "preview changes" or "show diff" button, which brings up a diff from the current page content to the proposed new page content. --[[JoshTriplett]]
+
+Some discussion from the main [[/index/discussion]] page:
+
+>It would be nice to be able to have a button to show "Differences" (or "Show Diff") when
+>editing a page. Is that an option that can be enabled?
+>
+>> It's doable, it could even be done by a [[todo/plugin]], I think.
+>> --[[Joey]]
