--- a/doc/todo/CVS_backend.mdwn
+++ b/doc/todo/CVS_backend.mdwn
@@ -4,7 +4,7 @@ ikiwiki could have a CVS backend.
 
 Original discussion:
 
-Any examples of using ikiwiki with cvs?
-
-> No, although the existing svn backend could fairly esily be modified into
-> a CVS backend, by someone who doesn't mind working with CVS. --[[Joey]]
+> Any examples of using ikiwiki with cvs?
+>
+>> No, although the existing svn backend could fairly esily be modified into
+>> a CVS backend, by someone who doesn't mind working with CVS. --[[Joey]]
