web commit by http://ethan.betacantrips.com/: file this done or what?

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -74,20 +74,13 @@ Any plugins or support for exporting to LaTeX?
 
 # Using with CVS?
 
-Any examples of using ikiwiki with cvs?
-
-> No, although the existing svn backend could fairly esily be modified into
-> a CVS backend, by someone who doesn't mind working with CVS. --[[Joey]]
+Moved to a [[todo_item|todo/CVS_backend]]. --[[JoshTriplett]]
 
 ----
 
 # Show differences before saving page?
 
-It would be nice to be able to have a button to show "Differences" (or "Show Diff") when
-editing a page. Is that an option that can be enabled?
-
-> It's doable, it could even be done by a [[todo/plugin]], I think.
-> --[[Joey]]
+Moved to the existing [[todo_item|todo/preview_changes]]. --[[JoshTriplett]]
 
 ----
 
