--- a/doc/bugs/space_in_a___91____91__page_link__93____93___doesn__39__t_make_link.mdwn
+++ b/doc/bugs/space_in_a___91____91__page_link__93____93___doesn__39__t_make_link.mdwn
@@ -26,3 +26,5 @@ Examples in various files show spaces within the double brackets.
 > contain spaces. --[[Joey]]
 
 (By the way, the Page Location dropdown above has underscores for spaces and underscore91underscore and 93 and 39 instead of left bracket, right bracket and single quote. When rendered on final page it will be correct but in the select option box it looks strange.)
+
+> This is fixed now. --Ethan
