--- a/doc/patchqueue/index.html_allowed.mdwn
+++ b/doc/patchqueue/index.html_allowed.mdwn
@@ -360,5 +360,307 @@ Updated version of Tumov's patch (with the changes we've discussed
 including fixes for some of the plugins) follows:
 
 <pre>
-
+Index: IkiWiki/Render.pm
+===================================================================
+--- IkiWiki/Render.pm	(revision 2770)
++++ IkiWiki/Render.pm	(working copy)
+@@ -32,8 +32,8 @@
+ 	my @links;
+ 	return unless $backlinks{$page};
+ 	foreach my $p (keys %{$backlinks{$page}}) {
+-		my $href=abs2rel(htmlpage($p), dirname($page));
+-			
++		my $href=urlto($p, $page);
++                
+ 		# Trim common dir prefixes from both pages.
+ 		my $p_trimmed=$p;
+ 		my $page_trimmed=$page;
+@@ -55,18 +55,14 @@
+ 	my @ret;
+ 	my $pagelink="";
+ 	my $path="";
+-	my $skip=1;
++	my $title=$config{wikiname};
++	
+ 	return if $page eq 'index'; # toplevel
+-	foreach my $dir (reverse split("/", $page)) {
+-		if (! $skip) {
+-			$path.="../";
+-			unshift @ret, { url => $path.htmlpage($dir), page => pagetitle($dir) };
+-		}
+-		else {
+-			$skip=0;
+-		}
++	foreach my $dir (split("/", $page)) {
++		push @ret, { url => urlto($path, $page), page => $title };
++		$path.="/".$dir;
++		$title=pagetitle($dir);
+ 	}
+-	unshift @ret, { url => length $path ? $path : ".", page => $config{wikiname} };
+ 	return @ret;
+ } #}}}
+ 
+Index: IkiWiki/Plugin/inline.pm
+===================================================================
+--- IkiWiki/Plugin/inline.pm	(revision 2770)
++++ IkiWiki/Plugin/inline.pm	(working copy)
+@@ -110,8 +110,8 @@
+ 
+ 	add_depends($params{page}, $params{pages});
+ 
+-	my $rssurl=rsspage(basename($params{page}));
+-	my $atomurl=atompage(basename($params{page}));
++	my $rssurl=basename(rsspage($params{page}));
++	my $atomurl=basename(atompage($params{page}));
+ 	my $ret="";
+ 
+ 	if (exists $params{rootpage} && $config{cgiurl}) {
+@@ -150,10 +150,7 @@
+ 			# Don't use htmllink because this way the
+ 			# title is separate and can be overridden by
+ 			# other plugins.
+-			my $link=bestlink($params{page}, $page);
+-			$link=htmlpage($link) if defined $type;
+-			$link=abs2rel($link, dirname($params{destpage}));
+-			$template->param(pageurl => $link);
++			$template->param(pageurl => urlto(bestlink($params{page}, $page), $params{destpage}));
+ 			$template->param(title => pagetitle(basename($page)));
+ 			$template->param(ctime => displaytime($pagectime{$page}));
+ 
+@@ -205,15 +202,17 @@
+ 		}
+ 	
+ 		if ($rss) {
+-			will_render($params{page}, rsspage($params{page}));
+-			writefile(rsspage($params{page}), $config{destdir},
++			my $rssp=rsspage($params{page});
++			will_render($params{page}, $rssp);
++			writefile($rssp, $config{destdir},
+ 				genfeed("rss", $rssurl, $desc, $params{page}, @list));
+ 			$toping{$params{page}}=1 unless $config{rebuild};
+ 			$feedlinks{$params{destpage}}=qq{<link rel="alternate" type="application/rss+xml" title="RSS" href="$rssurl" />};
+ 		}
+ 		if ($atom) {
+-			will_render($params{page}, atompage($params{page}));
+-			writefile(atompage($params{page}), $config{destdir},
++			my $atomp=atompage($params{page});
++			will_render($params{page}, $atomp);
++			writefile($atomp, $config{destdir},
+ 				genfeed("atom", $atomurl, $desc, $params{page}, @list));
+ 			$toping{$params{page}}=1 unless $config{rebuild};
+ 			$feedlinks{$params{destpage}}=qq{<link rel="alternate" type="application/atom+xml" title="Atom" href="$atomurl" />};
+@@ -288,16 +287,25 @@
+ 	return $content;
+ } #}}}
+ 
++sub basepage ($) { #{{{
++	my $page=shift;
++	
++	$page=htmlpage($page);
++	$page =~ s/\.html$//;
++	
++	return $page;
++} #}}}
++
+ sub rsspage ($) { #{{{
+ 	my $page=shift;
+ 
+-	return $page.".rss";
++	return basepage($page).".rss";
+ } #}}}
+ 
+ sub atompage ($) { #{{{
+ 	my $page=shift;
+ 
+-	return $page.".atom";
++	return basepage($page).".atom";
+ } #}}}
+ 
+ sub genfeed ($$$$@) { #{{{
+Index: IkiWiki/Plugin/aggregate.pm
+===================================================================
+--- IkiWiki/Plugin/aggregate.pm	(revision 2770)
++++ IkiWiki/Plugin/aggregate.pm	(working copy)
+@@ -320,7 +320,7 @@
+ 		# NB: This doesn't check for path length limits.
+ 		eval q{use POSIX};
+ 		my $max=POSIX::pathconf($config{srcdir}, &POSIX::_PC_NAME_MAX);
+-		if (defined $max && length(htmlpage($page)) >= $max) {
++		if (defined $max && length(htmlfn($page)) >= $max) {
+ 			$c="";
+ 			$page=$feed->{dir}."/item";
+ 			while (exists $IkiWiki::pagecase{lc $page.$c} ||
+@@ -356,7 +356,7 @@
+ 	if (ref $feed->{tags}) {
+ 		$template->param(tags => [map { tag => $_ }, @{$feed->{tags}}]);
+ 	}
+-	writefile(htmlpage($guid->{page}), $config{srcdir},
++	writefile(htmlfn($guid->{page}), $config{srcdir},
+ 		$template->output);
+ 
+ 	# Set the mtime, this lets the build process get the right creation
+@@ -434,4 +434,8 @@
+ 	return "$config{srcdir}/".htmlpage($page);
+ } #}}}
+ 
++sub htmlfn ($) { #{{{
++	return shift().".html";
++} #}}}
++
+ 1
+Index: IkiWiki/Plugin/linkmap.pm
+===================================================================
+--- IkiWiki/Plugin/linkmap.pm	(revision 2770)
++++ IkiWiki/Plugin/linkmap.pm	(working copy)
+@@ -49,9 +49,7 @@
+ 	my %mapitems = ();
+ 	foreach my $item (keys %links) {
+ 		if (pagespec_match($item, $params{pages}, $params{page})) {
+-			my $link=htmlpage($item);
+-			$link=IkiWiki::abs2rel($link, IkiWiki::dirname($params{page}));
+-			$mapitems{$item}=$link;
++			$mapitems{$item}=urlto($item, $params{destpage});
+ 		}
+ 	}
+ 
+Index: doc/usage.mdwn
+===================================================================
+--- doc/usage.mdwn	(revision 2770)
++++ doc/usage.mdwn	(working copy)
+@@ -244,6 +244,10 @@
+ 
+   Log to syslog(3).
+ 
++* --usedirs
++
++  Create output files named page/index.html instead of page.html.
++
+ * --w3mmode, --no-w3mmode
+ 
+   Enable [[w3mmode]], which allows w3m to use ikiwiki as a local CGI script,
+Index: doc/plugins/write.mdwn
+===================================================================
+--- doc/plugins/write.mdwn	(revision 2770)
++++ doc/plugins/write.mdwn	(working copy)
+@@ -412,6 +412,10 @@
+ 
+ This is the standard gettext function, although slightly optimised.
+ 
++#### `urlto($$)`
++
++Construct a relative url to the first parameter from the second.
++
+ ## RCS plugins
+ 
+ ikiwiki's support for revision control systems also uses pluggable perl
+Index: doc/ikiwiki.setup
+===================================================================
+--- doc/ikiwiki.setup	(revision 2770)
++++ doc/ikiwiki.setup	(working copy)
+@@ -94,6 +94,8 @@
+ 	syslog => 0,
+ 	# To link to user pages in a subdirectory of the wiki.
+ 	#userdir => "users",
++	# To enable alternate output filenames.
++	#usedirs => 1,
+ 
+ 	# To add plugins, list them here.
+ 	#add_plugins => [qw{goodstuff openid search wikitext camelcase
+Index: ikiwiki.in
+===================================================================
+--- ikiwiki.in	(revision 2770)
++++ ikiwiki.in	(working copy)
+@@ -46,6 +46,7 @@
+ 			"sslcookie!" => \$config{sslcookie},
+ 			"httpauth!" => \$config{httpauth},
+ 			"userdir=s" => \$config{userdir},
++			"usedirs!" => \$config{usedirs},
+ 			"exclude=s@" => sub {
+ 				push @{$config{wiki_file_prune_regexps}}, $_[1];
+ 			},
+Index: IkiWiki.pm
+===================================================================
+--- IkiWiki.pm	(revision 2770)
++++ IkiWiki.pm	(working copy)
+@@ -14,7 +14,7 @@
+ use Exporter q{import};
+ our @EXPORT = qw(hook debug error template htmlpage add_depends pagespec_match
+                  bestlink htmllink readfile writefile pagetype srcfile pagename
+-                 displaytime will_render gettext
++                 displaytime will_render gettext urlto
+                  %config %links %renderedfiles %pagesources);
+ our $VERSION = 1.02; # plugin interface version, next is ikiwiki version
+ our $version='unknown'; # VERSION_AUTOREPLACE done by Makefile, DNE
+@@ -72,6 +72,7 @@
+ 	sslcookie => 0,
+ 	httpauth => 0,
+ 	userdir => "",
++	usedirs => 0
+ } #}}}
+    
+ sub checkconfig () { #{{{
+@@ -226,7 +227,11 @@
+ sub htmlpage ($) { #{{{
+ 	my $page=shift;
+ 
+-	return $page.".html";
++	if (! $config{usedirs} || $page =~ /^index$/ || $page =~ /\/index$/) {
++		return $page.".html";
++	} else {
++		return $page."/index.html"; 
++	}
+ } #}}}
+ 
+ sub srcfile ($) { #{{{
+@@ -392,6 +397,7 @@
+ 
+ 	return "$config{url}/" if ! defined $page;
+ 	
++	$page=htmlpage($page);
+ 	$page=~s/[^\/]+$//;
+ 	$page=~s/[^\/]+\//..\//g;
+ 	return $page;
+@@ -421,6 +427,32 @@
+ 			$config{timeformat}, localtime($time)));
+ } #}}}
+ 
++sub beautify_url ($) { #{{{
++	my $url=shift;
++
++	$url =~ s!/index.html$!/!;
++	$url =~ s!^$!./!; # Browsers don't like empty links...
++
++	return $url;
++} #}}}
++
++sub urlto ($$) { #{{{
++	my $to=shift;
++	my $from=shift;
++
++	if (! length $to) {
++		return beautify_url(baseurl($from));
++	}
++
++	if (! grep { $_ eq $to } map { @{$_} } values %renderedfiles) {
++		$to=htmlpage($to);
++	}
++
++	my $link = abs2rel($to, dirname(htmlpage($from)));
++
++	return beautify_url($link);
++} #}}}
++
+ sub htmllink ($$$;@) { #{{{
+ 	my $lpage=shift; # the page doing the linking
+ 	my $page=shift; # the page that will contain the link (different for inline)
+@@ -456,7 +488,8 @@
+ 			"\">?</a>$linktext</span>"
+ 	}
+ 	
+-	$bestlink=abs2rel($bestlink, dirname($page));
++	$bestlink=abs2rel($bestlink, dirname(htmlpage($page)));
++	$bestlink=beautify_url($bestlink);
+ 	
+ 	if (! $opts{noimageinline} && isinlinableimage($bestlink)) {
+ 		return "<img src=\"$bestlink\" alt=\"$linktext\" />";
 </pre>
